fix tolls contrast

--- a/app/styles/editor/base_content_block.scss
+++ b/app/styles/editor/base_content_block.scss
@@ -92,7 +92,7 @@
         svg {
           width: 35px;
           height: 35px;
-          fill: $color3;
+          fill: $color7;
         }
 
         &:not(:last-child) {
